fixed category padding on mobile

--- a/assets/less/jomi/content.less
+++ b/assets/less/jomi/content.less
@@ -108,7 +108,7 @@
             color: rgba(255, 255, 255, 0.6);
             text-decoration: none;
             display: block;
-            padding: 10px 25px;
+            padding: 8px 10px;
             border-radius: 5px;
             border: 2px solid rgba(255, 255, 255, 0.6);
             margin-bottom: 10px;
@@ -327,6 +327,9 @@ article {
    }
    .article-overlay{
       //height: 125px;
+   }
+   .sidebar ul li a {
+      padding: 10px 25px !important;
    }
 }
 /* Large devices (large desktops, 1200px and up) */
